# Modules

./: CMakeLists.txt  newmodule.sh
libprimo/: BASEMODULE.c  CMakeLists.txt
libquinto/: CMakeLists.txt  quinto.c  quinto.h
libsecon/: BASEMODULE.h
libsecondo/: BASEMODULE.c
libsesto/: CMakeLists.txt  sesto.c  sesto.h
libterzo/: CMakeLists.txt  terzo.c  terzo.h
libtest-module/: CMakeLists.txt  test-module.c  test-module.h
