CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FILE(GLOB LIBS1 RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "lib*")
MESSAGE(${CMAKE_CURRENT_SOURCE_DIR})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/shared_libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/core_libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/cloud_libs)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/old_core/sensor)

foreach(lib ${LIBS1})
	if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${lib})
		MESSAGE(${lib})
		ADD_SUBDIRECTORY(${lib})
	endif(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${lib})
endforeach(lib)


